🐛 fix(card, scheme): alignement du détail carte & erreur js sur safari <14 [DS-3191] (#796)
- Sur les anciennes version de safari macOS (inférieure à 14.0)
  - corrige l'alignement du détail de la carte dans une grille de carte
  - corrige une erreur de javascript liée au dark mode sur scheme.js

--- a/src/component/card/style/module/_default.scss
+++ b/src/component/card/style/module/_default.scss
@@ -35,6 +35,7 @@
 
   @include body() {
     @include display-flex(column);
+    @include height(100%);
     flex: 1 1 auto;
     order: 2;
   }
